add mic indicator and toggle

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -54,6 +54,7 @@ bind = $mainMod SHIFT, B, exec, ~/.config/hypr/bin/toggle_border.sh
     bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_border.sh
 bind = $mainMod SHIFT, Z, exec, ~/.config/hypr/bin/toggle_zoom.sh
 bind = $mainMod, Z, exec, ~/.config/hypr/bin/cycle_zoom.sh
+bind = $mainMod, M, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # move focus with mainMod + vim
 bind = $mainMod, h, movefocus, l
