add fcitx to desktop

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -1,6 +1,7 @@
 # important apps
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = fcitx5 # ==set d
 
 exec-once = mako
 exec-once = waybar
