use simplelogin as powermenu

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -30,6 +30,13 @@ windowrule=size 100% 100%,wlogout
 # windowrule=stayfocused,wlogout
 windowrule=animation slide,wlogout
 
+windowrule=nomaximizerequest,title:^(simpleboard)$
+windowrule=nofullscreenrequest,title:^(simpleboard)$
+windowrule=size 100% 100%,title:^(simpleboard)$
+windowrule=float,title:^(simpleboard)$
+windowrule=move 0% 0%,title:^(simpleboard)$
+windowrule=animation slide,title:^(simpleboard)$
+
 # set some apps to special workspaces, bind access in special layer
 windowrule=workspace special:spotify silent,Spotify
 windowrule=workspace special:discord silent,discord
