simpleboard font resize + screenshot

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -19,9 +19,9 @@ bind = $mainMod, $print, exec, grimblast --freeze copysave area ~/screenshots/$(
 # screenshot area and open in swappy
 bind = $mainMod SHIFT, $print, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --freeze save area - | swappy -f - -o ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s)-annotated.png
 # screenshot active window
-# bind = $mainMod CONTROL, $print, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = $mainMod CONTROL, $print, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 # screenshot active monitor
-bind = $mainMod CONTROL, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = $mainMod CONTROL SHIFT, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, V, togglefloating,
