--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,7 @@
 splash=false
 preload=~/.config/hypr/bg/mountains.png
+# preload=~/.config/hypr/bg/cerqueira_unsplash.jpg
 wallpaper=,~/.config/hypr/bg/mountains.png
+# wallpaper=,~/.config/hypr/bg/cerqueira_unsplash.jpg
+
+# vim cms=#
