--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -42,3 +42,5 @@ color15  #ffffff
 map super+shift+enter launch --cwd=current --type=os-window
 map ctrl+shift+u scroll_page_up
 map ctrl+shift+d scroll_page_down
+
+allow_remote_control yes
