--- a/simpleboard/simpleboard.conf
+++ b/simpleboard/simpleboard.conf
@@ -4,6 +4,7 @@ height = 7
 width = 30
 # title = 1
 # titleColor = red
+preCommand = kitten @ set-font-size 40
 
 :[commands]
 [l]ock = swaylock; sleep 0.1; hyprctl dispatch dpms off, l
