new simpleboard update

--- a/simpleboard/simpleboard.conf
+++ b/simpleboard/simpleboard.conf
@@ -3,14 +3,16 @@
 height = 7
 width = 30
 # title = 1
+titleOverride = power menu
 # titleColor = red
 preCommand = kitten @ set-font-size 40
 
 :[commands]
-[l]ock = swaylock; sleep 0.1; hyprctl dispatch dpms off, l
+# sleep 0.1 is needed or else hyprctl dpms off acts weird
+[l]ock = swaylock; sleep 0.1 && hyprctl dispatch dpms off, l, stay_alive
 [e]xit = hyprctl dispatch exit, e
 # s[u]spend = systemctl suspend, u
-[h]ibernate = swaylock; sleep 0.1; systemctl hibernate, h
+[h]ibernate = swaylock; systemctl hibernate, h, stay_alive
 [s]hutdown = systemctl poweroff, s
 [r]eboot = systemctl reboot, r
 
