--- a/simpleboard/simpleboard.conf
+++ b/simpleboard/simpleboard.conf
@@ -1,10 +1,8 @@
 :[appearance]
-# color = blue
-height = 7
-width = 30
-# title = 1
+dynamicHeight = 1
+dynamicWidth = 1
+dynamicWidthMin = 20
 titleOverride = power menu
-# titleColor = red
 preCommand = kitten @ set-font-size 40
 
 :[commands]
