--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -42,7 +42,11 @@ decoration {
     blur {
         enabled = true
         size = 4
-        passes = 2
+        passes = 3
+        brightness = 0.9
+        vibrancy = 0.3
+        vibrancy_darkness = 0.9
+        contrast = 1.2
     }
 
     drop_shadow = true
