hyprland config style unification

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -14,27 +14,35 @@ exec-once = discord # ==set d
 # rules
 windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
 
-windowrule=float,pavucontrol
-windowrule=size 30% 30%,pavucontrol
-windowrule=move onscreen cursor -60% 40,pavucontrol
+windowrule = float,pavucontrol
+windowrule = size 30% 30%,pavucontrol
+windowrule = move onscreen cursor -60% 40,pavucontrol
 
-windowrule=float,nm-connection-editor
-windowrule=size 30% 30%,nm-connection-editor
-windowrule=move onscreen 100% 40,nm-connection-editor
+windowrule = float,nm-connection-editor
+windowrule = size 30% 30%,nm-connection-editor
+windowrule = move onscreen 100% 40,nm-connection-editor
 
-windowrule=nomaximizerequest,title:^(simpleboard)$
-windowrule=nofullscreenrequest,title:^(simpleboard)$
-windowrule=size 100% 100%,title:^(simpleboard)$
-windowrule=float,title:^(simpleboard)$
-windowrule=move 0% 0%,title:^(simpleboard)$
-windowrule=animation slide,title:^(simpleboard)$
+windowrule = nomaximizerequest,wlogout
+windowrule = nofullscreenrequest,wlogout
+windowrule = float,wlogout
+windowrule = move 0% 0%,wlogout
+windowrule = size 100% 100%,wlogout
+# windowrule = stayfocused,wlogout
+windowrule = animation slide,wlogout
+
+windowrule = nomaximizerequest,title:^(simpleboard)$
+windowrule = nofullscreenrequest,title:^(simpleboard)$
+windowrule = size 100% 100%,title:^(simpleboard)$
+windowrule = float,title:^(simpleboard)$
+windowrule = move 0% 0%,title:^(simpleboard)$
+windowrule = animation slide,title:^(simpleboard)$
 
 # set some apps to special workspaces, bind access in special layer
-windowrule=workspace special:spotify silent,Spotify
-windowrule=workspace special:discord silent,discord
-windowrule=workspace special:discord silent,Discord
+windowrule = workspace special:spotify silent,Spotify
+windowrule = workspace special:discord silent,discord
+windowrule = workspace special:discord silent,Discord
 
-# windowrule=stayfocused,steam # causes some issues, but fixes menus
+# windowrule = stayfocused,steam # causes some issues, but fixes menus
 
 # xwaylandvideobridge
 windowrulev2 = opacity 0.0 override 0.0 override,class:^(xwaylandvideobridge)$
@@ -47,4 +55,4 @@ windowrulev2 = noblur,class:^(xwaylandvideobridge)$
 windowrulev2 = noanim,class:^(ueberzugpp)(.*)$
 windowrulev2 = noborder,class:^(ueberzugpp)(.*)$
 
-# vim: ft=conf expandtab sw=4 ts=4
+# vim: ft = conf expandtab sw=4 ts=4
