--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -7,17 +7,17 @@ HYPRLAND CONFIGURATION
 
 # desktop monitors (custom)
 # <<set d
-monitor=DP-1,highrr,0x0,1
-monitor=DP-2,highrr,2560x360,1
+monitor = DP-1, highrr, 0x0, 1
+monitor = DP-2, highrr, 2560x360, 1
 # >>set
 
 # laptop monitor setups:
 # rotate left
-# monitor=eDP-1,preffered,0x0,1,transform,1
+# monitor = eDP-1, preffered, 0x0, 1, transform, 1
 # place on top
-# monitor=eDP-1,preffered,0x0,1
-# monitor=DP-1,preffered,0x-1080,1
-# monitor=DP-1,preffered,0x-1440,1
+# monitor = eDP-1, preffered, 0x0, 1
+# monitor = DP-1, preffered, 0x-1080, 1
+# monitor = DP-1, preffered, 0x-1440, 1
 
 # some default env variables
 env = XCURSOR_SIZE,24
@@ -31,6 +31,6 @@ source = ~/.config/hypr/apps.conf
 source = ~/.config/hypr/options.conf
 source = ~/.config/hypr/binds.conf
 
-exec-once=sleep 1; hyprctl dispatch workspace 1 # ==set d
+exec-once = sleep 1; hyprctl dispatch workspace 1 # ==set d
 
 # vim: ft=conf expandtab sw=4 ts=4
