--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -54,6 +54,8 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
     dim_special = 0.5
+
+    layerrule = blur,launcher
 }
 
 animations {
