set-machine now accepts multiple arguments

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,9 +15,9 @@ monitor = DP-2, highrr, 2560x360, 1
 # rotate left
 # monitor = eDP-1, preffered, 0x0, 1, transform, 1
 # place on top
-# monitor = eDP-1, preffered, 0x0, 1
-# monitor = DP-1, preffered, 0x-1080, 1
-# monitor = DP-1, preffered, 0x-1440, 1
+# monitor = eDP-1, preffered, 0x0, 1 # ==set lt1080 lt1440
+# monitor = DP-1, preffered, 0x-1080, 1 # ==set lt1080
+# monitor = DP-1, preffered, 0x-1440, 1 # ==set lt1440
 
 # some default env variables
 env = XCURSOR_SIZE,24
