--- a/simpleboard/simpleboard.conf
+++ b/simpleboard/simpleboard.conf
@@ -2,7 +2,7 @@
 dynamicHeight = 1
 dynamicWidth = 1
 dynamicWidthMin = 20
-titleOverride = power menu
+title = power menu
 preCommand = kitten @ set-font-size 40
 
 :[commands]
@@ -14,4 +14,4 @@ preCommand = kitten @ set-font-size 40
 [s]hutdown = systemctl poweroff, s
 [r]eboot = systemctl reboot, r
 
-# vim cms=#
+# vim: ft=conf
