--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -1,4 +1,5 @@
 # important apps
+# windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = fcitx5 # ==set d
@@ -12,7 +13,7 @@ exec-once = spotify-launcher # ==set d
 exec-once = discord # ==set d
 
 # rules
-windowrulev2 = nomaximizerequest, class:.* # only manual maximize (maximize != fullscreen)
+windowrulev2 = suppressevent maximize, class:.* # only manual maximize (maximize != fullscreen )
 
 windowrule = float,pavucontrol
 windowrule = size 30% 30%,pavucontrol
@@ -22,16 +23,6 @@ windowrule = float,nm-connection-editor
 windowrule = size 30% 30%,nm-connection-editor
 windowrule = move onscreen 100% 40,nm-connection-editor
 
-windowrule = nomaximizerequest,wlogout
-windowrule = nofullscreenrequest,wlogout
-windowrule = float,wlogout
-windowrule = move 0% 0%,wlogout
-windowrule = size 100% 100%,wlogout
-# windowrule = stayfocused,wlogout
-windowrule = animation slide,wlogout
-
-windowrule = nomaximizerequest,title:^(simpleboard)$
-windowrule = nofullscreenrequest,title:^(simpleboard)$
 windowrule = size 100% 100%,title:^(simpleboard)$
 windowrule = float,title:^(simpleboard)$
 windowrule = move 0% 0%,title:^(simpleboard)$
@@ -50,9 +41,5 @@ windowrulev2 = noanim,class:^(xwaylandvideobridge)$
 windowrulev2 = noinitialfocus,class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1,class:^(xwaylandvideobridge)$
 windowrulev2 = noblur,class:^(xwaylandvideobridge)$
-
-# ueberzugpp
-windowrulev2 = noanim,class:^(ueberzugpp)(.*)$
-windowrulev2 = noborder,class:^(ueberzugpp)(.*)$
 
 # vim: ft=conf expandtab sw=4 ts=4
