--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,6 +1,6 @@
-########################################################################################
-HYPRLAND CONFIGURATION
-########################################################################################
+#----------------------------------------------
+# HYPRLAND CONFIGURATION
+#----------------------------------------------
 
 # auto monitors (go with this)
 # monitor=,preferred,auto,1 # ==set l
