--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -103,7 +103,8 @@ misc {
     key_press_enables_dpms = true
 }
 
-device:syna32bf:00-06cb:ceb0-touchpad {
+device {
+    name = syna32bf:00-06cb:ceb0-touchpad
     sensitivity = 0.7
 }
 
