kitty tab styling

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -38,9 +38,23 @@ color13  #ddaeeb
 color14  #7fc8d1
 color15  #ffffff
 
+tab_bar_style separator
+tab_separator " | "
+active_tab_foreground   #61afef
+active_tab_background   #31353f
+active_tab_font_style   bold
+inactive_tab_foreground #5c6370
+inactive_tab_background #282c33
+inactive_tab_font_style normal
+
+
 # open new terminal in current working directory
 map super+shift+enter launch --cwd=current --type=os-window
 map ctrl+shift+u scroll_page_up
 map ctrl+shift+d scroll_page_down
+map ctrl+shift+l next_tab
+map ctrl+shift+h previous_tab
 
 allow_remote_control yes
+
+# vim: ft=conf
