--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -61,27 +61,29 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+bind = $mainMod, left, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 
 # move windows
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
 bind = $mainMod SHIFT, k, movewindow, u
 bind = $mainMod SHIFT, j, movewindow, d
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 
 bind = $mainMod SHIFT CONTROL, h, movewindoworgroup, l
 bind = $mainMod SHIFT CONTROL, l, movewindoworgroup, r
 bind = $mainMod SHIFT CONTROL, k, movewindoworgroup, u
 bind = $mainMod SHIFT CONTROL, j, movewindoworgroup, d
-
-# move monitors and workspaces
-bind = $mainMod CONTROL, h, focusmonitor, l
-bind = $mainMod CONTROL, l, focusmonitor, r
-bind = $mainMod CONTROL, k, focusmonitor, u
-bind = $mainMod CONTROL, j, focusmonitor, d
-# <<set l
-# bind = $mainMod ALT, l, workspace, r+1
-# bind = $mainMod ALT, h, workspace, r-1
-# >>set
+bind = $mainMod SHIFT CONTROL, left, movewindoworgroup, l
+bind = $mainMod SHIFT CONTROL, right, movewindoworgroup, r
+bind = $mainMod SHIFT CONTROL, up, movewindoworgroup, u
+bind = $mainMod SHIFT CONTROL, down, movewindoworgroup, d
 
 # workspaces
 # <<set l
@@ -96,6 +98,7 @@ bind = $mainMod CONTROL, j, focusmonitor, d
 # bind = $mainMod, 9, workspace, 9
 # bind = $mainMod, 0, workspace, 10
 # bind = $mainMod, n, workspace, empty
+# 
 # bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 # bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
 # bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
@@ -106,6 +109,11 @@ bind = $mainMod CONTROL, j, focusmonitor, d
 # bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 # bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 # bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+# 
+# bind = $mainMod ALT, l, workspace, r+1
+# bind = $mainMod ALT, h, workspace, r-1
+# bind = $mainMod ALT, right, workspace, r+1
+# bind = $mainMod ALT, left, workspace, r-1
 # >>set
 
 # split-monitor-workspaces binds for double monitor setups
@@ -136,6 +144,8 @@ bind = $mainMod SHIFT, 0, split-movetoworkspacesilent, 10
 
 bind = $mainMod ALT, l, split-workspace, r+1
 bind = $mainMod ALT, h, split-workspace, r-1
+bind = $mainMod ALT, left, split-workspace, r+1
+bind = $mainMod ALT, right, split-workspace, r-1
 # >>set
 
 # clear special workspaces when changing focus to another workspace
