--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -2,7 +2,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape
+    # kb_options = caps:swapescape # == set d
+#     kb_options = # ==set l
     kb_rules =
 
     repeat_delay = 250
