focus monitor binds

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -66,6 +66,15 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+bind = $mainMod CONTROL, h, focusMonitor, l
+bind = $mainMod CONTROL, l, focusMonitor, r
+bind = $mainMod CONTROL, k, focusMonitor, u
+bind = $mainMod CONTROL, j, focusMonitor, d
+bind = $mainMod CONTROL, left, focusMonitor, l
+bind = $mainMod CONTROL, right, focusMonitor, r
+bind = $mainMod CONTROL, up, focusMonitor, u
+bind = $mainMod CONTROL, down, focusMonitor, d
+
 # move windows
 bind = $mainMod SHIFT, h, movewindow, l
 bind = $mainMod SHIFT, l, movewindow, r
