--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -16,12 +16,16 @@ bind = $mainMod SHIFT, R, forcerendererreload
 
 # screenshot area
 bind = $mainMod, $print, exec, grimblast --freeze copysave area ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = $mainMod, PRINT, exec, grimblast --freeze copysave area ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 # screenshot area and open in swappy
 bind = $mainMod SHIFT, $print, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --freeze save area - | swappy -f - -o ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s)-annotated.png
+bind = $mainMod SHIFT, PRINT, exec, XDG_DESKTOP_DIR=~/screenshots grimblast --freeze save area - | swappy -f - -o ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s)-annotated.png
 # screenshot active window
 bind = $mainMod CONTROL, $print, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = $mainMod CONTROL, PRINT, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 # screenshot active monitor
 bind = $mainMod CONTROL SHIFT, $print, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
+bind = $mainMod CONTROL SHIFT, PRINT, exec, hyprctl -j monitors | jq -r '.[] | select(.focused==true) | "\(.x),\(.y) \(.width)x\(.height)"' | grim -g - ~/screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod, V, togglefloating,
@@ -41,6 +45,12 @@ bind = $mainMod CONTROL, RETURN, exec, $terminal -e fish --private
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, B, exec, $browser
+
+# media
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = CONTROL, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # toggle utilities
 bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_simpleboard.sh
@@ -127,6 +137,7 @@ bind = $mainMod SHIFT CONTROL, down, movewindoworgroup, d
 
 # split-monitor-workspaces binds for double monitor setups
 # https://github.com/Duckonaut/split-monitor-workspaces
+# install hyprwayland-scanner if compilation fail, and force update `hyprpm update -f`(maybe)
 # <<set d
 bind = $mainMod, 1, split-workspace, 1
 bind = $mainMod, 2, split-workspace, 2
@@ -153,8 +164,8 @@ bind = $mainMod SHIFT, 0, split-movetoworkspacesilent, 10
 
 bind = $mainMod ALT, l, split-workspace, r+1
 bind = $mainMod ALT, h, split-workspace, r-1
-bind = $mainMod ALT, left, split-workspace, r+1
-bind = $mainMod ALT, right, split-workspace, r-1
+bind = $mainMod ALT, right, split-workspace, r+1
+bind = $mainMod ALT, left, split-workspace, r-1
 # >>set
 
 # clear special workspaces when changing focus to another workspace
