remove animations from desktop, make more square

--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -26,11 +26,11 @@ input {
 }
 
 general {
-    gaps_in = 3
-    gaps_out = 5
-    border_size = 2
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 1
     col.active_border = rgba(61afefee) rgba(c678ddee) 45deg
-    col.inactive_border = rgba(282c34aa)
+    col.inactive_border = rgba(282c34cc)
 
     layout = dwindle
 
@@ -38,7 +38,7 @@ general {
 }
 
 decoration {
-    rounding = 1
+    rounding = 0
 
     blur {
         enabled = true
@@ -50,7 +50,7 @@ decoration {
         contrast = 1.2
     }
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 6
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -60,7 +60,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
     first_launch_animation = false
 
     bezier = easeOut, 0.16, 1, 0.3, 1
@@ -84,7 +84,7 @@ group {
     col.border_active = rgba(61afefee) rgba(c678ddee) 45deg
     col.border_inactive = rgba(282c34aa)
     groupbar {
-        font_family = Hack Nerd Font
+        font_family = JetBrainMono Nerd Font
         gradients = false
         text_color = rgba(f6f7f9ff)
         col.active = rgba(c678ddee)
