--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -54,16 +54,16 @@ bind = CONTROL, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # toggle utilities
 bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_simpleboard.sh
-bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
-bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar # toggle waybar visibility
-bind = $mainMod SHIFT, G, exec, ~/.config/hypr/bin/toggle_gaps.sh
-bind = $mainMod SHIFT, B, exec, ~/.config/hypr/bin/toggle_border.sh
+# bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
+# bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar # toggle waybar visibility
+# bind = $mainMod SHIFT, G, exec, ~/.config/hypr/bin/toggle_gaps.sh
+# bind = $mainMod SHIFT, B, exec, ~/.config/hypr/bin/toggle_border.sh
 # pseudo full screen
-    bind = $mainMod SHIFT, F, exec, pkill -SIGUSR1 waybar
-    bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_gaps.sh
-    bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_border.sh
-bind = $mainMod SHIFT, Z, exec, ~/.config/hypr/bin/toggle_zoom.sh
-bind = $mainMod, Z, exec, ~/.config/hypr/bin/cycle_zoom.sh
+    # bind = $mainMod SHIFT, F, exec, pkill -SIGUSR1 waybar
+    # bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_gaps.sh
+    # bind = $mainMod SHIFT, F, exec, ~/.config/hypr/bin/toggle_border.sh
+# bind = $mainMod SHIFT, Z, exec, ~/.config/hypr/bin/toggle_zoom.sh
+# bind = $mainMod, Z, exec, ~/.config/hypr/bin/cycle_zoom.sh
 bind = $mainMod, M, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # move focus with mainMod + vim
