fix split monitor workspace changes

--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -109,4 +109,11 @@ device {
     sensitivity = 0.7
 }
 
+plugin {
+    split-monitor-workspaces {
+        keep_focused = 1
+        enable_persistent_workspaces = 0
+    }
+}
+
 # vim: ft=conf expandtab sw=4 ts=4
