add utility keybinds

--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -33,7 +33,7 @@ bind = $mainMod, V, resizeactive, exact 70% 70%
 bind = $mainMod, V, centerwindow
 bind = $mainMod, F, fullscreen, 0
 
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 bind = $mainMod, T, togglegroup
 bind = $mainMod, tab, changegroupactive, f
@@ -54,6 +54,7 @@ bind = CONTROL, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
 # toggle utilities
 bind = $mainMod SHIFT, E, exec, ~/.config/hypr/bin/toggle_simpleboard.sh
+bind = $mainMod SHIFT, P, exec, ~/.config/hypr/bin/toggle_simpleboard.sh -f utility.conf
 # bind = $mainMod SHIFT, A, exec, ~/.config/hypr/bin/toggle_animation.sh
 # bind = $mainMod SHIFT, W, exec, pkill -SIGUSR1 waybar # toggle waybar visibility
 # bind = $mainMod SHIFT, G, exec, ~/.config/hypr/bin/toggle_gaps.sh
@@ -189,6 +190,9 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # special app workspaces
+bind = $mainMod, P, togglespecialworkspace, scratchpad
+bind = $mainMod CONTROL, P, togglespecialworkspace, palette
+
 bind = $mainMod, S, submap, special
 submap = special
 
@@ -201,11 +205,6 @@ submap = special
     bind = , A, submap, reset
     bind = $mainMod, A, togglespecialworkspace, spotify
     bind = $mainMod, A, submap, reset
-
-    bind = , F, togglespecialworkspace, scratchpad
-    bind = , F, submap, reset
-    bind = $mainMod, F, togglespecialworkspace, scratchpad
-    bind = $mainMod, F, submap, reset
 
     bind = , C, togglespecialworkspace, clear
     bind = , C, togglespecialworkspace, clear
