--- a/waybar/config
+++ b/waybar/config
@@ -40,6 +40,7 @@
       "discord": "󰙯 ",
       "spotify": " ",
       "scratchpad": "󰈙 ",
+      "palette": "󰏘 ",
       "none": "",
       "default": " "
     },
