open terminals in scratchpad

--- a/hypr/apps.conf
+++ b/hypr/apps.conf
@@ -11,6 +11,8 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 # startup apps
 exec-once = spotify-launcher # ==set d
 exec-once = discord # ==set d
+exec-once = [workspace special palette silent] kitty
+exec-once = [workspace special scratchpad silent] kitty
 
 # rules
 windowrulev2 = suppressevent maximize, class:.* # only manual maximize (maximize != fullscreen )
