--- a/hypr/binds.conf
+++ b/hypr/binds.conf
@@ -225,8 +225,10 @@ submap = send_special
     bind = , D, submap, reset
     bind = , A, movetoworkspacesilent, special:spotify
     bind = , A, submap, reset
-    bind = , F, movetoworkspacesilent, special:scratchpad
-    bind = , F, submap, reset
+    bind = , P,  movetoworkspacesilent, special:scratchpad
+    bind = , P, submap, reset
+    bind = CONTROL, P, movetoworkspacesilent, special:palette
+    bind = CONTROL, P, submap, reset
 
 bind = , S, submap, reset
 bind = $mainMod SHIFT, S, submap, reset
