--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,6 +4,7 @@ italic_font      auto
 bold_italic_font auto
 
 font_size 14
+disable_ligatures always
 text_composition_strategy legacy
 
 repaint_delay 7
