--- a/hypr/options.conf
+++ b/hypr/options.conf
@@ -50,11 +50,12 @@ decoration {
         contrast = 1.2
     }
 
-    drop_shadow = false
-    shadow_range = 6
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
-    dim_special = 0.5
+    shadow {
+        enabled = false
+        range = 6
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 
     layerrule = blur,launcher
 }
